test(service): Update RegexService tests for Java 21 compatibility
Refine existing regex service tests to use modern Java API:
- Replace get(0) calls with getFirst() method for lists
- Maintain comprehensive coverage of regex functionality
- Preserve tests for pattern validation, matching, and replacement
- Keep HTML highlighting and group capture tests